--- a/css/style.css
+++ b/css/style.css
@@ -1,13 +1,25 @@
+body {
+  font-family: 'Do Hyeon', sans-serif;
+}
+
 .header {
   text-align: center;
 }
 
 .header > div {
-  background-color: beige
+  background-color: #253f85;
+  color: white;
 }
 
 .header > img {
   display: block;
   margin-left: auto;
   margin-right: auto;
+}
+
+.section {
+  background-color: #253f85;
+  color: white;
+  font-size: 40px;
+  text-align: center; 
 }
