--- a/css/style.css
+++ b/css/style.css
@@ -1,25 +1,35 @@
 body {
   font-family: 'Do Hyeon', sans-serif;
+  margin: 0;
+  padding: 0;
 }
 
 .header {
   text-align: center;
 }
 
-.header > div {
-  background-color: #253f85;
-  color: white;
+.header_img {
+  background-image: url('../assets/yohan_gayoung.jpeg');
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: center;
+  height: 400px;
+  font-size: 50px;
 }
 
-.header > img {
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
+.header_wedding_date {
+  display: flex;
+  flex-direction: column;
+  font-size: 30px;
 }
 
-.section {
-  background-color: #253f85;
-  color: white;
-  font-size: 40px;
-  text-align: center; 
+.wedding_description {
+  background-color: #f7f7f7;
+  text-align: center;
+  font-size: 25px;
+}
+
+.wedding_parent {
+  text-align: center;
+  font-size: 30px;
 }
