--- a/css/style.css
+++ b/css/style.css
@@ -33,3 +33,45 @@ body {
   text-align: center;
   font-size: 30px;
 }
+
+.photo_title {
+  font-size: 40px;
+  text-align: center;
+  background-color: #f7f7f7;
+}
+
+.row {
+  display: grid;
+  grid-template-columns: repeat(3, minmax(200px, 1fr));
+  grid-template-rows: repeat(3, auto);
+  grid-column-gap: 10px;
+  grid-row-gap: 1em;
+}
+
+/* Create four equal columns that sits next to each other */
+/* .column {
+  flex: 33%;
+  max-width: 33%;
+  padding: 0 4px;
+} */
+
+.row img {
+  margin-top: 8px;
+  vertical-align: middle;
+  width: 100%;
+  border-radius: 20px;
+}
+
+/* @media screen and (max-width: 800px) {
+  .column {
+    flex: 30%;
+    max-width: 50%;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  .column {
+    flex: 100%;
+    max-width: 100%;
+  }
+} */
