--- a/css/style.css
+++ b/css/style.css
@@ -42,18 +42,11 @@ body {
 
 .row {
   display: grid;
-  grid-template-columns: repeat(3, minmax(200px, 1fr));
+  grid-template-columns: repeat(3, minmax(100px, 0.5fr));
   grid-template-rows: repeat(3, auto);
   grid-column-gap: 10px;
   grid-row-gap: 1em;
 }
-
-/* Create four equal columns that sits next to each other */
-/* .column {
-  flex: 33%;
-  max-width: 33%;
-  padding: 0 4px;
-} */
 
 .row img {
   margin-top: 8px;
@@ -62,16 +55,60 @@ body {
   border-radius: 20px;
 }
 
-/* @media screen and (max-width: 800px) {
-  .column {
-    flex: 30%;
-    max-width: 50%;
-  }
+/* The Modal (background) */
+.modal_1 {
+  display: none; /* Hidden by default */
+  position: fixed; /* Stay in place */
+  z-index: 1; /* Sit on top */
+  padding-top: 100px; /* Location of the box */
+  left: 0;
+  top: 0;
+  width: 100%; /* Full width */
+  height: 100%; /* Full height */
+  overflow: auto; /* Enable scroll if needed */
+  background-color: rgb(0,0,0); /* Fallback color */
+  background-color: rgba(0,0,0,0.9); /* Black w/ opacity */
 }
 
-@media screen and (max-width: 600px) {
-  .column {
-    flex: 100%;
-    max-width: 100%;
+/* Modal Content (image) */
+.modal-content {
+  margin: auto;
+  display: block;
+  width: 80%;
+  max-width: 700px;
+}
+
+@-webkit-keyframes zoom {
+  from {-webkit-transform:scale(0)} 
+  to {-webkit-transform:scale(1)}
+}
+
+@keyframes zoom {
+  from {transform:scale(0)} 
+  to {transform:scale(1)}
+}
+
+/* The Close Button */
+.close_img {
+  position: absolute;
+  top: 15px;
+  right: 35px;
+  color: #f1f1f1;
+  font-size: 40px;
+  font-weight: bold;
+  transition: 0.3s;
+}
+
+.close_img:hover,
+.close_img:focus {
+  color: #bbb;
+  text-decoration: none;
+  cursor: pointer;
+}
+
+/* 100% Image Width on Smaller Screens */
+@media only screen and (max-width: 700px){
+  .modal-content {
+    width: 100%;
   }
-} */
+}
