--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,5 @@
 @import "./modal.css";
+@import "./map.css";
 
 body {
   font-family: 'Do Hyeon', sans-serif;
@@ -36,7 +37,7 @@ body {
   font-size: 30px;
 }
 
-.photo_title {
+.photo_title, .map_title {
   font-size: 40px;
   text-align: center;
   background-color: #f7f7f7;
