--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 @import "./modal.css";
 
 body {
-  font-family: 'Do Hyeon', sans-serif;
+  font-family: 'KoPub Batang', sans-serif;
   margin: 0;
   padding: 0;
 }
@@ -10,13 +10,23 @@ body {
   text-align: center;
 }
 
-.header_img {
-  background-image: url('../assets/yohan_gayoung.jpeg');
+.header_main {
+  background-image: url('../assets/main.png');
   background-size: contain;
   background-repeat: no-repeat;
   background-position: center;
   height: 400px;
   font-size: 50px;
+}
+
+.header_img {
+  background-image: url('../assets/yohan_gayoung.jpeg');
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: center;
+  height: 300px;
+  font-size: 50px;
+  margin-bottom: 50px;
 }
 
 .header_wedding_date {
@@ -26,20 +36,41 @@ body {
 }
 
 .wedding_description {
-  background-color: #f7f7f7;
+  background-color: #d7bd98;
   text-align: center;
-  font-size: 25px;
+  font-size: 20px;
+  line-height: 30px;
+  font-weight: 100;
+  /* color: #d7bd98; */
+  color: white;
+  height: 350px;
 }
+
+.wedding_description > p {
+  padding-top: 30px;
+  margin-bottom: 20px;
+}
+
 
 .wedding_parent {
   text-align: center;
   font-size: 30px;
+  color: #737373;
 }
 
-.photo_title, .map_title {
-  font-size: 40px;
+.photo_title {
+  margin-top: 50px;
+  font-size: 20px;
+  color: #737373;
   text-align: center;
-  background-color: #f7f7f7;
+  margin-bottom: 20px;
+}
+
+.map_title {
+  margin-bottom: 20px;
+  font-size: 20px;
+  color: #737373;
+  text-align: center;
 }
 
 .row {
@@ -48,6 +79,7 @@ body {
   grid-template-rows: repeat(3, auto);
   grid-column-gap: 10px;
   grid-row-gap: 1em;
+  margin-bottom: 50px;
 }
 
 .row img {
@@ -65,4 +97,24 @@ body {
 @keyframes zoom {
   from {transform:scale(0)} 
   to {transform:scale(1)}
+}
+
+.vehicles {
+  color: #737373;
+}
+
+.vehicles dt{
+  font-size: 1.4em;
+  margin-top: 2em;
+  margin-bottom: 0.8em;
+  margin-left: 10px;
+}
+
+.vehicles dt:first-child { 
+  margin-top: 10px;
+}
+
+.vehicles dd{
+  margin-left: 10px;
+  margin-bottom: 10px;
 }
